# Neural-Network

./: CMakeLists.txt  README.md
app/: Main.cpp
src/network/: Arguments.cpp  Arguments.hpp  Edge.cpp  Edge.hpp  Layer.cpp  Layer.hpp  Network.cpp  Network.hpp  Neuron.cpp  Neuron.hpp  Utils.hpp
src/reader/: Reader.cpp  Reader.hpp
src/utils/: Arguments.cpp  Arguments.hpp  Utils.hpp
tools/Data-Generator/: CMakeLists.txt
tools/Data-Generator/src/: Main.cpp  XOR-Generator.cpp
